# rts

./: .gitignore  CMakeLists.txt  Makefile  RTS_report.docx  configure  description.txt  env-setup.sh  readme.md  readme.txt
deststation/: CMakeLists.txt  Makefile  configure  deststation.mk
deststation/inc/: deststation_common.h  deststation_log.h  deststation_main.h  deststation_socket.h
deststation/src/: deststation_common.h  deststation_log.c  deststation_main.c  deststation_main.h  deststation_socket.c  deststation_socket.h
files/: matrix_A.txt  matrix_C.txt
gateway/: CMakeLists.txt  Makefile  configure  gateway.mk
gateway/inc/: gateway_clients.h  gateway_common.h  gateway_database.h  gateway_dispatcher.h  gateway_log.h  gateway_main.h  gateway_scheduler.h  gateway_socket.h  gateway_tasks.h
gateway/src/: gateway_clients.c  gateway_common.h  gateway_database.c  gateway_dispatcher.c  gateway_log.c  gateway_main.c  gateway_scheduler.c  gateway_socket.c  gateway_socket.h  gateway_tasks.c
mclient/: CMakeLists.txt  Makefile  configure  mclient.mk
mclient/inc/: mclient_common.h  mclient_log.h  mclient_main.h  mclient_socket.h
mclient/src/: mclient_common.h  mclient_log.c  mclient_log.h  mclient_main.c  mclient_main.h  mclient_socket.c
vclient/: .gitignore  CMakeLists.txt  Makefile  configure  vclient.mk
vclient/inc/: vclient_common.h  vclient_log.h  vclient_main.h  vclient_socket.h
vclient/src/: vclient_common.h  vclient_log.c  vclient_log.h  vclient_main.c  vclient_main.h  vclient_socket.c
